--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,66 +1,45 @@
 <div class="page" id='index'>
-
+    <div class="index">
             <!-- 标题栏 -->
             <header class="bar bar-nav">
-                <h1 class="title">day建造</h1>
+                <h1 class="title">day建筑</h1>
             </header>
     
             <!-- 工具栏 -->
             <nav class="bar bar-tab">
-                  <a class="tab-item external active" href="#">
-                    <span class="icon icon-message"></span>
+                  <a class="tab-item external" href="#msg">
+                    <span class="iconfont a1">&#xe604;</span>
                     <span class="tab-label">消息</span>
-                  </a>
-                  <a class="tab-item external" href="#">
-                    <span class="icon icon-computer"></span>
-                    <span class="tab-label">文案</span>
                     <span class="badge">2</span>
                   </a>
-                  <a class="tab-item external" href="#">
-                    <span class="icon icon-card"></span>
-                    <span class="tab-label">文案</span>
+                  <a class="tab-item external active" href="#index">
+                    <span class="iconfont a2">&#xe602;</span>
+                    <span class="tab-label">工作台</span>
                   </a>
-                  <a class="tab-item external" href="#">
-                    <span class="icon icon-me"></span>
-                    <span class="tab-label">文案</span>
+                  <a class="tab-item external" href="#contant">
+                    <span class="iconfont a3">&#xe603;</span>
+                    <span class="tab-label">通讯录</span>
+                  </a>
+                  <a class="tab-item external" href="#my">
+                    <span class="iconfont a4">&#xe600;</span>
+                    <span class="tab-label">我</span>
                   </a>
                 
             </nav>
 
             <!-- 这里是页面内容区 -->
             <div class="content">
-                    <div class="list-block">
-                        <ul>
-                          <li>
-                            <a href="#router2" class="item-link item-content">
-                              <div class="item-inner">
-                                <div class="item-title">标题栏和工具栏</div>
-                              </div>
-                            </a>
-                          </li>
-                          <li>
-                            <a href="#router2" class="item-link item-content">
-                              <div class="item-inner">
-                                <div class="item-title">按钮</div>
-                              </div>
-                            </a>
-                          </li>
-                          <li>
-                            <a href="/demos/form" class="item-link item-content">
-                              <div class="item-inner">
-                                <div class="item-title">表单</div>
-                              </div>
-                            </a>
-                          </li>
-                          <li>
-                            <a href="/demos/searchbar" class="item-link item-content">
-                              <div class="item-inner">
-                                <div class="item-title">搜索栏</div>
-                              </div>
-                            </a>
-                          </li>
-                    </div>
-            </div>
+                <div class="banner"></div>
+                <div class="menusB">
+                    <div class="t_c"> <a href="#certificate"><i class="ficons a1"></i><span class="fname">证书管理</span></a> </div>
+                    <div class="t_c"> <a href="#mycertificate"><i class="ficons a2"></i><span class="fname">我的证书</span></a> </div>
+                    <div class="t_c"> <a href="#opinion"><i class="ficons a3"></i><span class="fname">舆情管理</span></a> </div>
+                    <div class="t_c"> <a href="#myopinion"><i class="ficons a4"></i><span class="fname">我的舆情</span></a> </div>
 
+                    <div class="t_c"> <a href="#project"><i class="ficons a5"></i><span class="fname">项目管理</span></a> </div>
+                    <div class="t_c"> <a href="#honor"><i class="ficons a6"></i><span class="fname">荣誉栏</span></a> </div>
+                </div>
+            </div>
+    </div>
 </div>
 
