--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
     <link rel="stylesheet" href="http://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
     <link rel="stylesheet" href="http://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-    <!-- <link rel="stylesheet" href="dist/style.css"> -->
+
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1468287944_5707989.css">
+    
+    <link rel="stylesheet" href="dist/style.css">
   </head>
   <body>
     
     <!-- page集合的容器，里面放多个平行的.page，其他.page作为内联页面由路由控制展示 -->
-    <div class="page-group">
+    <div class="page-group ui-zk">
         <div class="page" id="login">
             <div class="login">
                  <div class="pos">
@@ -24,16 +26,17 @@
                         <div class=lg_css>
                             <img src="app/images/login_lg.png" width="50%"/>
                         </div>
-                        <div class="lg_cp"><span class="icon icon-me"></span><input type="text" class="weui_input" placeholder="帐号" ref="user" /></div>
-                        <div class="lg_cp"><span class="icon icon-code"></span><input type="password" class="weui_input" placeholder="密码" ref="psw"/></div>
+                        <div class="lg_cp"><span class="iconfont">&#xe600;</span><input type="text" class="weui_input" placeholder="帐号" ref="user" /></div>
+                        <div class="lg_cp"><span class="iconfont">&#xe601;</span><input type="password" class="weui_input" placeholder="密码" ref="psw"/></div>
                         <div class="lg_bp">
                             <input type="submit" value="登录" class="button button-big button-fill weui_btn" id="loginBtn"/>
-                            <p class="lg_fg"><a href="#" class="login_a">忘记密码？</a></p>
+                            <p class="lg_fg"><a href="/app/html/index" class="login_a">忘记密码？</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="tmpHtml"></div>
     </div>
 
     <!-- popup, panel 等放在这里 -->
@@ -48,7 +51,6 @@
         </div>
     </div>
 
-    <div class="tmpHtml"></div>
 
     <script type='text/javascript' src='http://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='http://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
